<resources>
    <string name="app_name">AA Key_shot</string>

    <string name="permission_flatwindow">打开「悬浮窗」</string>
    <string name="permission_list">打开「查看列表」</string>
    <string name="permission_accessibility">打开「无障碍」权限</string>
    <string name="permission_write_settings">打开「设置授权」权限</string>
    <string name="permission_notice">所有权限都已打开</string>
    <string name="accessibility_description">自用辅助功能：按钮等相关功能使用</string>
    <string name="back">返回</string>
    <string name="home">主页</string>
    <string name="annotation">批注</string>
    <string name="volume">音量</string>
    <string name="config">配置</string>
    <string name="backstage">后台</string>
</resources>